--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,74 @@
+# --- OS (macOS / Windows / Linux)
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+.Spotlight-V100
+.Trashes
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# --- Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyo
+
+# --- Environnements virtuels
 .venv/
 venv/
-__pycache__/
-*.pyc
-*.zip
-.DS_Store
+env/
+ENV/
+
+# --- Caches / Outils Python
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.pyre/
+.tox/
+.cache/
+.hypothesis/
+.ipynb_checkpoints/
+.pyright
+
+# --- Couverture / Build artefacts
+.coverage
+.coverage.*
+coverage.xml
+htmlcov/
+dist/
+build/
+*.egg-info/
+.eggs/
+*.egg
+*.spec
+
+# --- Logs
+*.log
+
+# --- Streamlit
+.streamlit/secrets.toml
+
+# --- Éditeurs / IDE
+.vscode/
+.idea/
+*.iml
+*.swp
+*.swo
+.history/
+
+# --- (Optionnel) Node/Front si tu ajoutes du JS
+node_modules/
+npm-debug.log*
+yarn-error.log*
+.pnpm-store/
+
+# --- Fichiers d'env (ne jamais pousser de secrets)
+.env
+.env.*
+!.env.example
+
+# --- (Optionnel) Dossier d’exports locaux
+/output/
